codepkg/objects/Application__c.object
<CustomObject>
    <fields>
        <fullName>Project_Type__c</fullName>
        <inlineHelpText>Acquisition Demo Relocation is the purchase of properties voluntarily to remove structure(s) from natural hazards (flood/landslide/avalanche.) Structures must be demolished or relocated outside hazards.</inlineHelpText>
        <label>Project Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Plan</fullName>
                </value>
                <value>
                    <fullName>Plan Update</fullName>
                </value>
                <value>
                    <fullName>Planning-Related Activities</fullName>
                </value>
                <value>
                    <fullName>Acquisition Demo-Relocation</fullName>
                </value>
                <value>
                    <fullName>Drainage/Flood Control</fullName>
                </value>
                <value>
                    <fullName>Elevation-Floodproofing</fullName>
                </value>
                <value>
                    <fullName>Safe Room/Shelter</fullName>
                </value>
                <value>
                    <fullName>Seismic Retrofitting</fullName>
                </value>
                <value>
                    <fullName>Wildfire &amp; Vegetation Management</fullName>
                </value>
                <value>
                    <fullName>Generator(s)/Other Power Source(s)</fullName>
                </value>
                <value>
                    <fullName>Mitigation Reconstruction</fullName>
                </value>
                <value>
                    <fullName>Tsunami Vertical Evacuation</fullName>
                </value>
                <value>
                    <fullName>Advance Assistance</fullName>
                </value>
                <value>
                    <fullName>Post-Disaster Code Enforcement</fullName>
                </value>
                <value>
                    <fullName>Public Awareness and Education</fullName>
                </value>
                <value>
                    <fullName>Early Warning Systems</fullName>
                </value>
                <value>
                    <fullName>Hazard Identification or Mapping</fullName>
                </value>
                <value>
                    <fullName>GIS for Mitigation</fullName>
                </value>
                <value>
                    <fullName>New Techniques/Methods</fullName>
                </value>
                <value>
                    <fullName>Project Scoping</fullName>
                </value>
                <value>
                    <fullName>Nature-Based Solutions/Green Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Planning-New Plan</fullName>
                </value>
                <value>
                    <fullName>Partnerships</fullName>
                </value>
                <value>
                    <fullName>Building Code</fullName>
                </value>
                <value>
                    <fullName>Planning-Plan Update</fullName>
                </value>
                <value>
                    <fullName>Utility and Infrastructure Protection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Name</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposed_Action__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Proposed Action</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Protection_From_Future_Natural_Hazards__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Describe how the proposed action will reduce or eliminate damage or risk to life and property, include information on the level of protection the project will provide if designed to a specific standard (For example, 6.0 earthquake, 100-year flood, etc.)</inlineHelpText>
        <label>Protection From Future Natural Hazards</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Public_notice_of_floodplain_impact__c</fullName>
        <label>Public notice of floodplain impact?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>Reason for &apos;Reason to Submit&apos;</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>County__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scope_of_Work_Approval_and_Adoption__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Describe the Scope of Work (SOW) for the Plan Approval &amp; Plan Adoption phases of the planning process</inlineHelpText>
        <label>Scope of Work - Approval and Adoption</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Scope_of_Work_Hazard_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Describe the Scope of Work (SOW) for the Hazard Identification phase of the planning process.</inlineHelpText>
        <label>Scope of Work - Hazard ID</label>
        <length>35000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Scope_of_Work_Mitigation_Strategy__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Describe the Scope of Work (SOW) for the Mitigation Strategy development phase of the planning process.</inlineHelpText>
        <label>Scope of Work - Mitigation Strategy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Scope_of_Work_Outreach_and_Meetings__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Describe the Scope of Work (SOW) for public outreach, meeting and public hearing phase of the planning process.</inlineHelpText>
        <label>Scope of Work - Outreach and Meetings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Scope_of_Work_Plan_Prep_and_Drafting__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Describe the Scope of Work (SOW) for the plan preparation &amp; drafting phases of the planning process.</inlineHelpText>
        <label>Scope of Work - Plan Prep and Drafting</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Scope_of_Work_Planning_Process__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Describe the Scope of Work (SOW) for the planning process.</inlineHelpText>
        <label>Scope of Work - Planning Process</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Scope_of_Work_Risk_Assessment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Describe the Scope of Work (SOW) for the Risk Assessment phase of the planning process.</inlineHelpText>
        <label>Scope of Work - Risk Assessment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Second_Action_Alternative__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Second Action Alternative</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State_Abbreviation</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Reason__c</fullName>
        <label>Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Pending OES Review</fullName>
                </value>
                <value>
                    <fullName>Analyst Review In Progress</fullName>
                </value>
                <value>
                    <fullName>Analyst Review Complete</fullName>
                </value>
                <value>
                    <fullName>OES RFI In Progress</fullName>
                </value>
                <value>
                    <fullName>Manager Review</fullName>
                </value>
                <value>
                    <fullName>OES Subapplication Review Complete</fullName>
                </value>
                <value>
                    <fullName>Waitlisted</fullName>
                </value>
                <value>
                    <fullName>Selected for Submission to FEMA</fullName>
                </value>
                <value>
                    <fullName>Not Selected - Pending Future Consideration</fullName>
                </value>
                <value>
                    <fullName>Submitted to FEMA</fullName>
                </value>
                <value>
                    <fullName>FEMA Review In Progress</fullName>
                </value>
                <value>
                    <fullName>FEMA RFI Pending</fullName>
                </value>
                <value>
                    <fullName>FEMA EHP Review Pending</fullName>
                </value>
                <value>
                    <fullName>FEMA Review Complete</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>By Subapplicant after funds are obligated</fullName>
                </value>
                <value>
                    <fullName>By Subapplicant with no funds obligated</fullName>
                </value>
                <value>
                    <fullName>By OES</fullName>
                </value>
                <value>
                    <fullName>Waitlist Archive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>OES Review</fullName>
                </value>
                <value>
                    <fullName>OES Decision</fullName>
                </value>
                <value>
                    <fullName>FEMA Review</fullName>
                </value>
                <value>
                    <fullName>FEMA Decision</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Applicant_Type__c</fullName>
        <label>Sub-Applicant Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>County</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Private Non-Profit</fullName>
                </value>
                <value>
                    <fullName>Special District</fullName>
                </value>
                <value>
                    <fullName>Tribal</fullName>
                </value>
                <value>
                    <fullName>City;County</fullName>
                    <isActive>false</isActive>
                    <label>City;County</label>
                </value>
                <value>
                    <fullName>Private;Non-Profit</fullName>
                    <isActive>false</isActive>
                    <label>Private;Non-Profit</label>
                </value>
                <value>
                    <fullName>Special;District</fullName>
                    <isActive>false</isActive>
                    <label>Special;District</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Application_Due_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Subapplication Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subapplicant_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subapplicant Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subapplication_Complete__c</fullName>
        <label>Ready to Submit?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subapplication_Due_Date__c</fullName>
        <formula>Pre_Application__r.Sub_Application_Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subapplication Due Date Formula</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trigger_event_for_loses_avoided_analysis__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Trigger event for loses avoided analysis</inlineHelpText>
        <label>Trigger event for loses avoided analysis</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Verified_Benefit_Cost_Ratio_After_Review__c</fullName>
        <label>Verified Benefit Cost Ratio After Review</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>What_is_the_mitigation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>What is the mitigation action for Phase2?</inlineHelpText>
        <label>What is the mitigation action for Phase2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_is_the_mitigation_action__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Describe in detail the proposed mitigation action and how it will mitigate the problem. The description should include the proposed approach and expected mitigation outcome(s).</inlineHelpText>
        <label>What is the mitigation action?</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_is_the_mitigation_action_for_Phase1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>What is the mitigation action for Phase1?</inlineHelpText>
        <label>What is the mitigation action for Phase1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_type_of_LHMP__c</fullName>
        <label>What type of LHMP?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Local Single Jurisdictional Multihazard Mitigation Plan</fullName>
                </value>
                <value>
                    <fullName>Local Multi Jurisdictional Multihazard Mitigation Plan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_started_completed_in_detail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Work started/completed in detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>project_complies_with_local_hazard_mitig__c</fullName>
        <inlineHelpText>Does the project complies with local hazard mitigation plan?</inlineHelpText>
        <label>project complies with local hazard mitig</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Application</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Pre_Application__c</columns>
        <columns>Application_Type__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Subapplicant_Entity__c</columns>
        <columns>Is_this_project_phased__c</columns>
        <columns>Is_Any_Open_RFI__c</columns>
        <columns>Sub_Application_Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>HMA_SubApplication_Pending_Review_Application</fullName>
        <columns>NAME</columns>
        <columns>Pre_Application__c</columns>
        <columns>Application_Type__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Subapplicant_Entity__c</columns>
        <columns>Is_this_project_phased__c</columns>
        <columns>Is_Any_Open_RFI__c</columns>
        <columns>Sub_Application_Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Reason__c</columns>
        <filterScope>Queue</filterScope>
        <label>HMA SubApplication - Pending Review</label>
        <language>en_US</language>
        <queue>HMA_SubApplication_Pending_Review</queue>
        <sharedTo>
            <role>HMA_Analyst</role>
            <role>HMA_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_SubApplications</fullName>
        <columns>NAME</columns>
        <columns>Pre_Application__c</columns>
        <columns>Application_Type__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Subapplicant_Entity__c</columns>
        <columns>Is_this_project_phased__c</columns>
        <columns>Is_Any_Open_RFI__c</columns>
        <columns>Sub_Application_Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Reason__c</columns>
        <filterScope>Mine</filterScope>
        <label>My SubApplications</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>AP-{00000}</displayFormat>
        <label>Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <recordTypes>
        <fullName>HMGP</fullName>
        <active>true</active>
        <label>HMGP</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>Shared_with_Contact_Roles__c</fullName>
        <label>Shared with Contact Roles</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Shared_with_Responsible_Representative__c</fullName>
        <label>Shared with Responsible Representative</label>
    </sharingReasons>
    <validationRules>
        <fullName>Is_BCR_verified_at_1_or_greater_Not_Null</fullName>
        <active>true</active>
        <description>When Application Status=&quot;Withdrawn&quot; &amp; Status Reason=&quot;by OES&quot; then &quot;	
Does project have a verified BCR&quot; is not empty</description>
        <errorConditionFormula>IF( AND(ISPICKVAL(Status__c, &apos;Withdrawn&apos;), ISPICKVAL(Status_Reason__c, &apos;By OES&apos;)),
    ISPICKVAL(Is_BCR_verified_at_1_0_or_greater__c, &apos;&apos;), false)</errorConditionFormula>
        <errorDisplayField>Is_BCR_verified_at_1_0_or_greater__c</errorDisplayField>
        <errorMessage>Please complete this field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Is_BCR_verified_at_1_or_greater_validate</fullName>
        <active>true</active>
        <description>When &apos;Verified Benefit Cost Ratio After Review &lt; 1&apos; then &apos;BCR 1.0 or greater?&apos; must be No 
And When &apos;Verified Benefit Cost Ratio After Review &gt;= 1&apos; then &apos;BCR 1.0 or greater?&apos; must be Yes 
And for &apos;null/blank&apos; it must be &apos;pending or not applicable&apos;</description>
        <errorConditionFormula>AND(  IF(  NOT(ISPICKVAL( Status__c , &apos;Draft&apos;)), true, false),
				  OR(IF($UserRole.Name = &apos;HMA Manager&apos;, true, false), IF($UserRole.Name = &apos;HMA Analyst&apos;, true, false)),
					 OR( IF( ABS(Verified_Benefit_Cost_Ratio_After_Review__c) &lt; 1, NOT(ISPICKVAL(Is_BCR_verified_at_1_0_or_greater__c, &apos;No&apos;)), false) ,
				IF( ABS(Verified_Benefit_Cost_Ratio_After_Review__c)  &gt;= 1, NOT(ISPICKVAL(Is_BCR_verified_at_1_0_or_greater__c, &apos;Yes&apos;)), false) ,
				IF( OR( ISNULL(ABS(Verified_Benefit_Cost_Ratio_After_Review__c)),  
											 ISBLANK(ABS(Verified_Benefit_Cost_Ratio_After_Review__c))
										) , 
							 NOT( OR(ISPICKVAL(Is_BCR_verified_at_1_0_or_greater__c, &apos;Pending&apos;),
																ISPICKVAL(Is_BCR_verified_at_1_0_or_greater__c, &apos;Not Applicable&apos;)
															)
											), false
						)
		     )
		)</errorConditionFormula>
        <errorDisplayField>Is_BCR_verified_at_1_0_or_greater__c</errorDisplayField>
        <errorMessage>When &apos;Verified Benefit Cost Ratio After Review &lt; 1&apos; then &apos;BCR 1.0 or greater?&apos; must be &quot;No&quot;
OR When &apos;Verified Benefit Cost Ratio After Review &gt;= 1&apos; then &apos;BCR 1.0 or greater?&apos; must be &quot;Yes&quot;
OR for &apos;null/blank&apos; it must be &quot;pending&quot; or &quot;not applicable&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Is_this_a_eligible_Subapplicant_Not_null</fullName>
        <active>true</active>
        <description>When Application Status=&quot;Withdrawn&quot; &amp; Status Reason=&quot;by OES&quot; then &quot;Is this an eligible Subapplicant?&quot; is not empty</description>
        <errorConditionFormula>IF( AND(ISPICKVAL(Status__c, &apos;Withdrawn&apos;), ISPICKVAL(Status_Reason__c, &apos;By OES&apos;)),
    ISPICKVAL(Is_this_an_eligible_Subapplicant__c, &apos;&apos;), false)</errorConditionFormula>
        <errorDisplayField>Is_this_an_eligible_Subapplicant__c</errorDisplayField>
        <errorMessage>Please complete this field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Is_this_an_eligible_Activity_Not_Null</fullName>
        <active>true</active>
        <description>When Application Status=&quot;Withdrawn&quot; &amp; Status Reson=&quot;by OES&quot; then &quot;Is this an eligible Activity?&quot; is not empty</description>
        <errorConditionFormula>IF( AND(ISPICKVAL(Status__c, &apos;Withdrawn&apos;), ISPICKVAL(Status_Reason__c, &apos;By OES&apos;)),
ISPICKVAL(Is_this_an_eligible_Activity__c, &apos;&apos;), false)</errorConditionFormula>
        <errorDisplayField>Is_this_an_eligible_Activity__c</errorDisplayField>
        <errorMessage>Please complete this field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Local_Hazard_Mitigation_Status_Not_Null</fullName>
        <active>true</active>
        <description>When Application Status=&quot;Withdrawn&quot; &amp; Status Reson=&quot;by OES&quot; then &quot;Local Hazard Mitigation Plan Status&quot; is not empty</description>
        <errorConditionFormula>IF( AND(ISPICKVAL(Status__c, &apos;Withdrawn&apos;), ISPICKVAL(Status_Reason__c, &apos;By OES&apos;)), 
		       ISPICKVAL(Local_Hazard_Mitigation_Plan_Status__c, &apos;&apos;), false)</errorConditionFormula>
        <errorDisplayField>Local_Hazard_Mitigation_Plan_Status__c</errorDisplayField>
        <errorMessage>Please complete this field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Program_Not_null</fullName>
        <active>true</active>
        <description>If Has_subapp_been_submitte_to_OES_before__c OR Funded_previously_under_a_Fed_program__c is Yes then Program Should not be null</description>
        <errorConditionFormula>IF( 
						OR(  ISPICKVAL(Has_subapp_been_submitte_to_OES_before__c, &apos;Yes&apos;), 
									ISPICKVAL(Funded_previously_under_a_Fed_program__c, &apos;Yes&apos;)),
  						 IF(OR(ISNULL(Program__c), ISBLANK(Program__c)) , true, false) , false)</errorConditionFormula>
        <errorMessage>Please select the Program.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reason_is_mandatory</fullName>
        <active>true</active>
        <description>Reason is mandatory if ready to submit is no.</description>
        <errorConditionFormula>IF( OR($UserRole.Name = &apos;HMA Manager&apos;,$UserRole.Name = &apos;HMA Analyst&apos;) , 
				    IF( ISPICKVAL( Subapplication_Complete__c , &apos;No&apos;) ,  ISBLANK(Reason__c) , false) , 
				    false)</errorConditionFormula>
        <errorDisplayField>Reason__c</errorDisplayField>
        <errorMessage>Please complete this field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Owner_Change</fullName>
        <active>true</active>
        <description>Restrict HMA Analyst users to change the owner.</description>
        <errorConditionFormula>$User.Title = &quot;HMA Analyst&quot; &amp;&amp; ISCHANGED(OwnerId)</errorConditionFormula>
        <errorMessage>Only Managers can change the owner</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Status_change_to_FEMA_Review</fullName>
        <active>true</active>
        <description>Status can be changed to FEMA Review only when  &apos;Yes&apos; value for Ready to Submit field.</description>
        <errorConditionFormula>IF(AND(OR( $UserRole.Name = &apos;HMA Manager&apos;, $UserRole.Name = &apos;HMA Analyst&apos;),
ISCHANGED(Status__c),
ISPICKVAL(Status__c, &apos;FEMA Review&apos;),
ISPICKVAL(Subapplication_Complete__c, &apos;No&apos;)),
true,
false)</errorConditionFormula>
        <errorDisplayField>Subapplication_Complete__c</errorDisplayField>
        <errorMessage>Only &apos;Yes&apos; value to this field can move the status to &apos;FEMA Review&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Subapplication_comment_change</fullName>
        <active>true</active>
        <description>Restrict user to select the field option when status changes to &quot;OES Decision&quot;</description>
        <errorConditionFormula>IF(AND(OR( $UserRole.Name = &apos;HMA Manager&apos;, $UserRole.Name = &apos;HMA Analyst&apos;),
								 ISCHANGED(Status__c),  
							ISPICKVAL(Status__c, &apos;OES Decision&apos;), 
							ISPICKVAL(Subapplication_Complete__c, &apos;&apos;) ), 
				true, 
				false)</errorConditionFormula>
        <errorDisplayField>Subapplication_Complete__c</errorDisplayField>
        <errorMessage>Please complete this field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_withdraw_if_SubApp_met_criteria</fullName>
        <active>true</active>
        <description>Restrict withdraw if Sub-Application met the FEMA submission criteria</description>
        <errorConditionFormula>IF( AND(
          ISPICKVAL(Status__c, &apos;Withdrawn&apos;), 
          ISPICKVAL(Status_Reason__c, &apos;By OES&apos;)
        ), IF(  AND(
                    ISPICKVAL( Is_this_an_eligible_Activity__c , &apos;Yes&apos;),
                    ISPICKVAL( Is_this_an_eligible_Subapplicant__c, &apos;Yes&apos;),
                    ISPICKVAL( Is_BCR_verified_at_1_0_or_greater__c, &apos;Yes&apos;),
                    NOT(ISPICKVAL( Local_Hazard_Mitigation_Plan_Status__c, &apos;Not Started&apos;)) 
                   ), true, false
              ),
            false
    )</errorConditionFormula>
        <errorMessage>Sub-app meets FEMA submission criteria and cannot be withdrawn.</errorMessage>
    </validationRules>
</CustomObject>